# WinMMM10

./: .gitignore  BUILD.md  BUILD_INSTRUCTIONS.txt  BUILD_SUCCESS.md  CMakeLists.txt  DEPLOYMENT_READY.md  DISTRIBUTION_README.md  INSTALLATION_GUIDE.md  LICENSE.txt  PREPARE_FOR_DISTRIBUTION.md  QUICK_START.md  README.md  README_BUILD.md  READY_FOR_BUILD.md  READY_FOR_DISTRIBUTION.md  TROUBLESHOOTING_BUILD.md  build_release.bat  clean_cache.bat  create_installer.bat  deploy_qt_dlls.bat  prepare_distribution.bat
docs/: API.md  PLUGINS.md  README.md  WORKFLOW.md
src/: main.cpp  pch.h
src/binary/: BinaryFile.cpp  BinaryFile.h  Checksum.cpp  Checksum.h  EditHistory.cpp  EditHistory.h  Endianness.h  HexSearch.cpp  HexSearch.h  MemoryMapper.cpp  MemoryMapper.h
src/cache/: ApplicationCache.cpp  ApplicationCache.h  CacheManager.cpp  CacheManager.h  ProjectCache.cpp  ProjectCache.h
src/core/: AnnotationManager.cpp  AnnotationManager.h  Application.cpp  Application.h  BookmarkManager.cpp  BookmarkManager.h  Project.cpp  Project.h  ProjectManager.cpp  ProjectManager.h  SafeModeManager.cpp  SafeModeManager.h  Settings.cpp  Settings.h
src/editing/: BatchOperations.cpp  BatchOperations.h  InterpolationEngine.cpp  InterpolationEngine.h  MapComparator.cpp  MapComparator.h  MapMath.cpp  MapMath.h
src/heuristics/: MapDetector.cpp  MapDetector.h  PatternAnalyzer.cpp  PatternAnalyzer.h
src/kess/: KessEcuInfo.h  KessFileReader.cpp  KessFileReader.h  KessFileWriter.cpp  KessFileWriter.h  KessMapConverter.cpp  KessMapConverter.h
src/mappacks/: MapPack.cpp  MapPack.h
src/maps/: Map2D.cpp  Map2D.h  Map3D.cpp  Map3D.h  MapAxis.cpp  MapAxis.h  MapDefinition.cpp  MapDefinition.h  ScalingEngine.h
src/plugins/: PluginInterface.h  PluginManager.cpp  PluginManager.h
src/ui/: AnnotationsPanel.cpp  AnnotationsPanel.h  BookmarksPanel.cpp  BookmarksPanel.h  CacheSettingsDialog.cpp  CacheSettingsDialog.h  DarkTheme.cpp  DarkTheme.h  DockManager.cpp  DockManager.h  HexEditor.cpp  HexEditor.h  HexEditorWidget.cpp  HexEditorWidget.h  MainWindow.cpp  MainWindow.h  Map2DViewer.cpp  Map2DViewer.h  Map3DViewer.cpp  Map3DViewer.h  MapDefinitionDialog.cpp  MapDefinitionDialog.h  MapListWidget.cpp  MapListWidget.h  ProjectDialog.cpp  ProjectDialog.h  RecentFilesMenu.cpp  RecentFilesMenu.h  SearchReplaceDialog.cpp  SearchReplaceDialog.h  StatusBar.cpp  StatusBar.h
src/validation/: DifferenceCalculator.cpp  DifferenceCalculator.h  Validator.cpp  Validator.h
tests/: TestChecksum.cpp  TestChecksum.h  TestMain.cpp  TestMapDetection.cpp  TestMapDetection.h  TestMapPack.cpp  TestMapPack.h
